Contract Configurator 0.5.0
- Improved validation when loading configuration.  More checking for invalid cases and better error messaging.
- Added HasPassengers parameter.
- Added Funds requirement.
- Added Science requirement.
- Added Repuration requirement.
- Minor bug fixes.

Contract Configurator 0.4.1
- Added OrbitalInclination parameter (thanks tattagreis).
- Added OrbitalEccentricity parameter (thanks tattagreis).
- Added OrbitalApoapsis parameter (thanks tattagreis).
- Added OrbitalPeriapsis parameter (thanks tattagreis).
- Fixed defaults for SCANsatCoverage requirement.
- Moved debug key from Alt-F9 to Alt-F10.
- Added LICENSE.txt into download file.
- Minor bug fixes.

Contract Configurator 0.4.0
- Added WaypointGenerator behaviour.  Allows creation of waypoints.
- Added VisitWaypoint parameter (for use with WaypointGenerator behaviour).
- Added OrbitGenerator behaviour.  Allows creation of orbits.
- Added ReachSpecificOrbit parameter (for use with OrbitGenerator behaviour).
- Added HasCrew requirement.  Allows filtering on trait, experience level and count.
- Updated HasCrew parameter to support trait and experience level filtering.
- Added VesselMass parameter.
- Added Facility requirement - requires that a player has a facility upgraded to a specified level.
- Added SCANsatCoverage parameter and requirement (big thanks @tattagreis on the SCANsat integration).
- Added support for turning up log levels through the ContractConfigurator.cfg file (thanks @tattagreis).
- Fixed a bug in the HasPart parameter for parts with an underscore in the name (thanks @tattagreis).
- HasCrew now errors if minCrew > maxCrew (thanks @tattagreis).
- Most requirements are no longer checked on active contracts.  Exposed attribute to override default behaviour through config file (thanks @scerion).
- Added ability to reload all CONTRACT_TYPE nodes on demand (via Alt-F9).
- Various minor bug-fixes.

Contract Configurator 0.3.4
- Fixed incompatibility with Tweakscale.
